<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.where2go.where2go.PlaceFragment">

    <RelativeLayout
        android:id="@+id/place_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.36"
        android:background="@android:color/holo_blue_light">

        <ImageView
            android:id="@+id/place_cover"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />

        <ImageView
            android:id="@+id/mask"
            android:src="@drawable/mask"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_height="match_parent" />

        <TextView
            style="@style/shadowText"
            android:id="@+id/place_name"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/place_short_location"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:maxWidth="200dp"
            android:gravity="center"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            style="@style/shadowText"
            android:id="@+id/place_short_location"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/action_buttons"
        android:layout_weight="0.09"
        android:background="@drawable/bottom_stroke"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_sad_heart"
            android:id="@+id/favButton"
            android:onClick="addToFavorites"
            android:contentDescription="@string/fav"/>

        <View
            android:layout_width="0.7dp"
            android:layout_height="fill_parent"
            android:background="@android:color/darker_gray"/>

        <ImageButton
            android:layout_width="0dp"
            android:background="@android:color/transparent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/picButton"
            android:onClick="uploadPhoto"
            android:src="@drawable/ic_action_camera"
            android:contentDescription="@string/photo_upload"/>
    </LinearLayout>

    <ListView
        android:id="@+id/reviews_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.54"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/place_buttons"
        android:layout_weight="0.09"
        android:background="@color/placeButtonsBar"
        android:orientation="horizontal">

        <Button
            style="@style/placeActionButton"
            android:onClick="exit"
            android:text="@string/finish"/>
        <Button
            style="@style/placeActionButton"
            android:onClick="writeReview"
            android:text="@string/write_review"/>
        <Button
            style="@style/placeActionButton"
            android:onClick="nextPlace"
            android:id="@+id/nextPlace"
            android:text="@string/next_place" />
    </LinearLayout>

</LinearLayout>
